Fixed margin-top on mobile

--- a/css/custom/website.css
+++ b/css/custom/website.css
@@ -14,7 +14,7 @@ body > .container {
     padding: 0rem 0.25rem 0.25rem 0.25rem;
 }
 
-.paper-buttons .btn {
+.paper-button {
     margin-top: 0.25rem;
 }
 
